src/styles/views/mtg.scss
.mana-symbol {
    background-image: url("/media/Mana Symbols.png");
    background-size: auto 1em;
    width: 1em;
    height: 1em;
    display: inline-block;
}

.zero     {background-position:  0em 0em;}
.one      {background-position: -1em 0em;}
.two      {background-position: -2em 0em;}
.three    {background-position: -3em 0em;}
.four     {background-position: -4em 0em;}
.five     {background-position: -5em 0em;}
.six      {background-position: -6em 0em;}
.seven    {background-position: -7em 0em;}
.eight    {background-position: -8em 0em;}
.nine     {background-position: -9em 0em;}
.ten      {background-position: -10em 0em;}
.eleven   {background-position: -11em 0em;}
.twelve   {background-position: -12em 0em;}
.thirteen {background-position: -13em 0em;}
.fourteen {background-position: -14em 0em;}
.fifteen  {background-position: -15em 0em;}
.sixteen  {background-position: -16em 0em;}
.white {background-position: -17em 0em;}
.blue  {background-position: -18em 0em;}
.black {background-position: -19em 0em;}
.red   {background-position: -20em 0em;}
.green {background-position: -21em 0em;}
.snow  {background-position: -22em 0em;}
.variable {background-position: -23em 0em;}
.tap      {background-position: -24em 0em;}
.untap    {background-position: -25em 0em;}
.azorius  {background-position: -26em 0em;}
.orzhov   {background-position: -27em 0em;}
.dimir    {background-position: -28em 0em;}
.izzet    {background-position: -29em 0em;}
.rakdos   {background-position: -30em 0em;}
.golgari  {background-position: -31em 0em;}
.boros    {background-position: -32em 0em;}
.gruul    {background-position: -33em 0em;}
.selesnya {background-position: -34em 0em;}
.simic    {background-position: -35em 0em;}
.two-white {background-position: -36em 0em;}
.two-blue  {background-position: -37em 0em;}
.two-black {background-position: -38em 0em;}
.two-red   {background-position: -39em 0em;}
.two-green {background-position: -40em 0em;}
.phyrexian-white {background-position: -41em 0em;}
.phyrexian-blue  {background-position: -42em 0em;}
.phyrexian-black {background-position: -43em 0em;}
.phyrexian-red   {background-position: -44em 0em;}
.phyrexian-green {background-position: -45em 0em;}
.colorless {background-position: -46em 0em;}

#deckEditor {
    .group{
        width: 100%;
        display: flex;
        flex-flow: column nowrap;

        label, input, textarea{
            resize: none;
            margin: 2px;
        }

        #deckList {
            height: 50vh;
        }
    }

    #submit {
        display: block;
        margin: 0 auto;
        margin-top: 5px;
    }

    deck-editor{
        .category {
            width: 50%;

            .card-input{
                display: flex;
                flex-flow: row nowrap;

                span {
                    flex-grow: 1;

                    input {
                        width: 100%;
                    }
                }

                select {
                    width: 120px;

                }
            }
        }
    }
}

#commanders {
    margin-bottom: 1em;
    font-size: 1.25em;
}

#deckHeader {
    overflow: auto;
    padding: 0 0.3em;
    text-align: center;
}

.category {
    margin-bottom: 2em;
    width: 100%;

    ul{
        padding: 0;
    }
}

.card {
    margin-top: 5px;
    position: relative;
    display: flex;
    flex-flow: row nowrap;

    .figure {
        display: flex;
        flex-flow: row nowrap;
    }

    figure {
        visibility: hidden;
        margin: 0;
        padding: 0;
        position: absolute;
        top: auto;
        left: auto;
        transform: translateY(-30%);
        z-index: 1;

        width: 40%;

        .foil {
            background: linear-gradient(-60deg,purple,blue,green,#ff0,red);
            opacity: .25;
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            border-radius: 7px;
        }

        &.doubleFace img{
            width: 50%;
        }

        img {
            width: 100%;
            border-radius: 7px;
        }
    }

    &:hover figure, figure:hover, figure:focus{
        visibility: visible;
    }

    .name {
        cursor: default;
        width: 55%;
        user-select: none;
    }
}

#deck-list {
    padding: 0;

    li a{
        list-style: none;
        display: grid;
        grid-template-columns: 200px auto auto;
        width: 100%;

        .color_identity {
            font-size: 1.25em;
        }

        .deck-art {
            grid-row: 1 / 3;
        }
    }
}

@media (min-width: $tablet){
    .card {
        margin-top: 5px;
        position: relative;
        display: grid;
        grid-template-columns: auto 50%;

        .name {
            width: auto;
        }
    }
    
    .figure{
        display: flex;
        flex-wrap: nowrap;
        flex-direction: row;
    }
    
    .card figure img {
        width: 200px;
    }
    
    .category {
        width: 50%;
    }

    #deckEditor deck-editor .category {
        width: 33%;
    }
}

@media (min-width: $laptop){
    .category {
        width: 33%;
    }

    .card figure .foil {
        width: 95%;
    }

    .card figure.doubleFace .foil {
        width: 100%;
    }
}

